--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUMINA AUDIO</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/Logo-3.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Logo-3-(1).png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
