landing-page-gruppe-3-færdig

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
             <p>Skulderstrop & totebag medfølger</p>
         </article>
         <figure class="model-og-tote">
-            <video autoplay muted loop src="video/Højtaler-video-farver-beige-trans.mp4"></video>
+            <video autoplay muted loop>
+                <source src="video/Højtaler-seamless-loop-beige-background.mp4" type="video/mp4">
+            </video>
             <img src="img/speakers/transparent-Canvas-tote-med-Lumina-Audio-logo.png" alt="lumina audio totebag">
         </figure>
     <hr class="linjer-paa-siden">
